--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   pin_code_fields: ^7.0.0
   flutter_spinkit: "^4.1.2"
   geolocator: ^5.3.1
+  data_tables: ^1.3.2
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +51,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  fonts:
+    - family: BreeSerif
+      fonts:
+        - asset: assets/BreeSerif.ttf
+    - family: ReggaeOne
+      fonts:
+        - asset: assets/ReggaeOne.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
